# verification-game

./: LICENSE  README.markdown
frama-c-plugin/decorate/: .depend  Makefile  decorate.ml  type_info.ml  type_info.mli
frama-c-plugin/galois-lib/: Makefile.include  galois_cil.ml  galois_lib.ml  galois_symbols.ml
web-prover/: .gitignore  Makefile  Storm2.cabal  cur-level-set  storm.config  view.html
web-prover/demo-levels/a_function_call/: A_Galois_axiomatic2.why  Globals.why  frama-c-output  holes.hs  input.why  tasks.hs
web-prover/demo-levels/a_loop/: frama-c-output  holes.hs  input.why  tasks.hs  types.hs
web-prover/demo-levels/adler32/: A_Galois_axiomatic4.why  frama-c-output  holes.hs  input.why  tasks.hs  types.hs
web-prover/demo-levels/crc32_little/: A_Galois_axiomatic10.why  Globals.why  frama-c-output  holes.hs  input.why  tasks.hs
web-prover/demo-levels/crc32_little/safety/tasks/task_9/: solution_map.hs
web-prover/demo-levels/find/: A_Galois_axiomatic1.why  frama-c-output  holes.hs  input.why  tasks.hs
web-prover/demo-levels/more_than_safety/: A_Galois_axiomatic1.why  A_Galois_axiomatic3.why  frama-c-output  holes.hs  input.why  tasks.hs
web-prover/demo-levels/rows/: A_Galois_axiomatic2.why  frama-c-output  holes.hs  input.why  tasks.hs  types.hs
web-prover/demo-levels/rows_width/: A_Galois_axiomatic3.why  frama-c-output  holes.hs  input.why  post_templates.hs  types.hs
web-prover/demo-levels/rows_width/safety/tasks/0/: level.hs  stats.hs
web-prover/demo-levels/two_tasks/: A_Galois_axiomatic4.why  frama-c-output  holes.hs  input.why  tasks.hs
web-prover/doc/: api.html  api.org
web-prover/example-src/: AES128Decrypt.c  AES128Decrypt.h  BV.h  LL.c  dyn_call.c  find.c  flight.c  functions.c  mem.c  nest.c  openssl-1.0.1i-dec.i  openssl-1.0.1i-merged.i  pointer_loop.c  predicate_tutorials.c  simple_project.c  test-string.c  test.c  test_extract_acsl.c  zlib-source.c
web-prover/example-src/coq_rows_width/: input_VCrows_width_assert_rte_mem_access_WP.v  input_VCrows_width_loop_inv_galois_decorator_2_established_WP.v  input_VCrows_width_loop_inv_galois_decorator_2_preserved_WP.v  input_VCrows_width_loop_inv_galois_decorator_established_WP.v  input_VCrows_width_loop_inv_galois_decorator_preserved_WP.v  input_VCrows_width_post_WP.v
web-prover/exes/: Bot.hs  ComputeCallGraph.hs  ComputeTasksLists.hs  DumpStats.hs  GenLevelDemo.hs  MakeBossLevel.hs  MakeReport.hs  ParsePrePost.hs  ProtoLevel.hs  Server.hs  SetPrePost.hs  SolveEasy.hs  UnusualSymbols.hs  ViewStormFile.hs
web-prover/primitives/BN_sub_word/: post  pre
web-prover/primitives/CRYPTO_free/: post  pre
web-prover/primitives/CRYPTO_malloc_BIGNUM/: post
web-prover/primitives/CRYPTO_malloc_BN_CTX/: post
web-prover/primitives/CRYPTO_malloc_BN_POOL_ITEM/: post  pre
web-prover/primitives/CRYPTO_malloc_unsigned_int/: post
web-prover/primitives/ERR_put_error/: post
web-prover/primitives/OPENSSL_cleanse_BIGNUM/: post  pre
web-prover/primitives/OPENSSL_cleanse_unsigned_long/: post  pre
web-prover/primitives/memcpy_unsigned_int/: post  pre
web-prover/primitives/memset_BIGNUM/: post  pre
web-prover/primitives/memset_unsigned_long/: post  pre
web-prover/scripts/: change-level-set  check-source  extract-acsl  get-name  get-remote-solutions  install_tutorial  list-tags  make-all-funs  make-bn-levels  make-level  make-openssl-level  make-tag-groups  make-zlib-level  package  queues-to-csv  queues-to-json  real-names-json  save-real-name  shell_config  solve-easy  storm-cleanup  update-meta  wp_config
web-prover/src/: BossLevel.hs  CSE.hs  CTypes.hs  Cache.hs  Dirs.hs  Errors.hs  Goal.hs  JsonStorm.hs  NumberLiterals.hs  Outer.hs  Path.hs  Play.hs  Predicates.hs  Prove.hs  ProveBasics.hs  ProveBits.hs  Rewrite.hs  Rule.hs  SecureEncoding.hs  Serial.hs  ServerDocs.hs  Session.hs  SiteState.hs  SolutionMap.hs  StorageBackend.hs  TaskGroup.hs  TaskSnapshot.hs  TestRewrite.hs  Theory.hs  Utils.hs
web-prover/src/Utils/: AsList.hs
web-prover/tutorial/: A_Galois_axiomatic15.why  input.why  types.hs
web-prover/web_src/: browse.html  custom_links.json  index.html  tag-groups.json  task.html  test.html  testing.html
web-prover/web_src/css/: browse.css  common.css  expr.css  help.css  outer.css  style.css  task.css
web-prover/web_src/img/: README
web-prover/web_src/img/VA/Art/Lair/: button_arrow_left
web-prover/web_src/img/creatures/: fixCreatures.hs
web-prover/web_src/js/: browse.js  copyrights.js  expr.js  metadata.js  outer.js  task1.js  world.js
web-prover/wp_alloc/: README  alloc.driver  alloc.mlw  alloc.why
web-prover/wp_lib/: A_MemCmp.why  A_StrLen.why  Cbits.why  Memory.why
